<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.Aldhi.tugas.MainActivity" >

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/txtNama" />

    <TextView
        android:id="@+id/txtNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtNama"
        android:text="@string/txtNim" />
    
    <TextView
        android:id="@+id/txtFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtNim"
        android:text="@string/txtFacebook" />
    
    <TextView
        android:id="@+id/txtNim2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFacebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/txtNim2"
        android:textColor="#ff1412" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/Image"
        android:src="@drawable/bdg" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/Button"/>

    

</RelativeLayout>
